--- a/Minder/Views/Profile/Edit.cshtml
+++ b/Minder/Views/Profile/Edit.cshtml
@@ -10,35 +10,41 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>My profile</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+<div class="form-horizontal">
+    <h4>My profile</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nickname, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nickname, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nickname, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Nickname, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Nickname, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Nickname, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProfilePicture, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.ProfilePicture, htmlAttributes: new { @class = "control-label col-md-2" })
 
 
-            <div class="col-md-10">
-                @if (Model.ProfilePicture != null)
-                {
-                    @Html.HiddenFor(model => model.ProfilePicture.Id)
-                    @Html.HiddenFor(model => model.ProfilePicture.Filename)
-                    <br /><img src="~/Content/Uploads/@Model.Id/@Model.ProfilePicture.Filename" class="image" /><br />
-                }
-                <input type="file" name="ImageUpload" class="form-control" />
-                @Html.ValidationMessageFor(model => model.ProfilePicture, "", new { @class = "text-danger" })
-            </div>
+        <div class="col-md-10">
+            @if (Model.ProfilePicture != null)
+            {
+                @Html.HiddenFor(model => model.ProfilePicture.Id)
+                @Html.HiddenFor(model => model.ProfilePicture.Filename)
+                <br /><img src="~/Content/Uploads/@Model.Id/@Model.ProfilePicture.Filename" style="max-height: 100px; max-width: 100px;" image /><br />
+            }
+            <input type="file" name="ImageUpload" class="form-control" />
+            @Html.ValidationMessageFor(model => model.ProfilePicture, "", new { @class = "text-danger" })
         </div>
+    </div>
+
+    <div class="col-md-10">
+        <input multiple type="file" name="ImageUpload" class="form-control" />
+        @Html.ValidationMessageFor(model => model.Pictures, "", new { @class = "text-danger" })
+    </div>
+</div>
         
         <div class="form-group">
             @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -101,7 +107,6 @@
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
-    </div>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
