--- a/Minder/Views/Profile/Search.cshtml
+++ b/Minder/Views/Profile/Search.cshtml
@@ -92,7 +92,9 @@
             </div>
         </div>
     </div>
-                    }
+}
+
+@Html.Partial("_SearchProfileResultsPartial")
 
 <div>
     @Html.ActionLink("Back to List", "Index")
